# bulot

./: .gitignore  LICENSE  README.md  pyproject.toml
bulot/: __init__.py  _py_version.py  _types.py  aliases.py  command.py  file_operations.py  logger.py  pipe.py  shell.py  utils.py  xargs.py
tests/: aliases_test.py  command_test.py  conftest.py  constants.py  file_operations_test.py  pipe_test.py  readme_test.py  shell_test.py
