[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bulot"
description = 'Helper to run Bash commands with python'
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Yoann", email = "" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["rich"]
dynamic = ["version"]

[project.optional-dependencies]
lint = ["flake8"]
typecheck = ["mypy"]
fixer = ["black"]

[project.urls]
Documentation = "https://github.com/yoann9344/bulot#readme"
Issues = "https://github.com/yoann9344/bulot/issues"
Source = "https://github.com/yoann9344/bulot"

[tool.hatch.version]
path = "bulot/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=bulot --cov=tests"
no-cov = "cov --no-cov"
lint = "flake8"
typecheck = "mypy --install-types bulot"
fixer = "black ."

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "bulot/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["bulot"]

[publish.index.repos.main]
url = "https://upload.pypi.org/legacy/"
